--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     height:80vh;
     color: white;
-    padding: 40px;
+    padding: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,4 +13,9 @@
     font: size 40px;;
 
 
+}
+.mouse{
+    align-items: baseline;
+    justify-content: baseline;
+    
 }
