--- a/css/style.css
+++ b/css/style.css
@@ -17,5 +17,27 @@
 .mouse{
     align-items: baseline;
     justify-content: baseline;
+
     
+}
+#team{
+    text-align: center;
+    font-size:40px;
+
+}
+#about{
+    text-align: center;
+    font-size: 20px;
+
+}
+.services{
+    background-image: url('/assets/backgrounds/s_image.jpg');
+    padding: 80px;
+    height:50vh ;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
 }
