--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
-.assets{
+.delani{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+.assets-container{
     background-image:url('/assets/backgrounds/h_img.jpg');
     background-size: cover;
     width: 100%;
@@ -11,12 +18,20 @@
     justify-content: center;
     align-items: center;
     font-size: 30px;
+}
 
+.assets{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 60vh;
+    margin-top: auto;
 
 }
 .mouse{
-    display: flex;
-    text-align: end;
+    margin-top: auto;
 
 
     
@@ -34,12 +49,12 @@
 .services{
     background-image: url('/assets/backgrounds/s_image.jpg');
     padding: 80px;
-    width: 80%;
+    width: 100%;
     height:50vh ;
     box-sizing: border-box;
     background-repeat: no-repeat;
     text-align: center;
     color: white;
-    font-size: 20px;
+    font-size: 20px;  
 
 }
