--- a/css/style.css
+++ b/css/style.css
@@ -50,21 +50,21 @@
     background-image: url('/assets/backgrounds/s_image.jpg');
     padding: 80px;
     width: 100%;
-    height:50vh ;
+     min-height:40vh;
     box-sizing: border-box;
     background-repeat: no-repeat;
     text-align: center;
     color: white;
     font-size: 20px;
+    background-size: cover;
+    background-position: center center;
+    
     
     
 
 
 }
-.studio{
-    display: flex;
-    font-size: 20px;
-}
+
 .portfolio{
     text-align: center;
     font-size: 24px;
