--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,16 @@
     text-align: center;
     
 } 
+
+.designTitle, .developmentTitle, .managementTitle{
+    display:none;
+}
+
+#name, #email,#comment{
+background-color: inherit;
+border: 2px solid white;
+}
+
+::-webkit-input-placeholder{
+    color:white;
+}
