added a background image

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 .assets-container{
-    background-image:url('/assets/backgrounds/h_img.jpg');
+    background-image:url("../assets/backgrounds/h_img.jpg");
     background-size: cover;
     width: 100%;
     box-sizing: border-box;
@@ -51,7 +51,7 @@ body{
 
 }
 .services{
-    background-image: url('/assets/backgrounds/s_image.jpg');
+    background-image: url("../assets/backgrounds/s_image.jpg");
     padding: 80px;
     width: 100%;
      min-height:40vh;
@@ -75,7 +75,7 @@ body{
 
 }
 .contact{
-    background-image: url('/assets/backgrounds/c_image.jpg');
+    background-image: url('../assets/backgrounds/c_image.jpg');
     padding: 80px;
     height: 50vh;
     font-size: 24px;
