--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,9 @@ body{
     font-size: 24px;
 
 }
+
+
+
 .contact{
     background-image: url('../assets/backgrounds/c_image.jpg');
     padding: 80px;
@@ -99,3 +102,36 @@ border: 2px solid white;
 ::-webkit-input-placeholder{
     color:white;
 }
+.col-md-3{
+    position: relative;
+
+}
+.col-md-3 img{
+  margin: 20px auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+.text-display {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    display: none;
+  }
+  
+  
+  
+.col-md-3:hover .text-display {
+    opacity: 1;
+  }
+  
+.text {
+    background-color:white;
+    color:black;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
